--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,7 @@ footer {
     justify-content: space-between;
     width: 100%;
     height: 100px;
+   
     /* position: fixed;
     top: 50;
     left: 0;
@@ -311,6 +312,7 @@ footer {
 
 .nav-center-bar {
     width: 100%;
+    
     /* position: fixed;
     top: 500;
     left: 0;
@@ -326,7 +328,7 @@ footer {
     color: white;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 200px;
+    padding: 10px 20%;
     margin: 0px;
     
 }
@@ -343,7 +345,7 @@ footer {
 .photo-carousel-container {
     background-size: auto;
     /* background-color: pink; */
-    margin: 50px;
+    margin: 50px 0 10px;
     display: flex;
     justify-content: center;
 }
@@ -432,30 +434,50 @@ footer {
 .regional-activities {
     position: relative;
     padding: 0;
-    margin: 30px;
+    margin: 10px;
+}
+
+.select-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 1000px;
+    padding: 10px;
 }
 
 .activity-option-dropdown {
-    display: block;
+    /* display: inline-block; */
     
-    width: 20%;
-    position: absolute;
-    right: 0;
-    background-color: teal;
+    width: 40%;
+    /* position: absolute; */
+    /* right: 0; */
+    background-color: rgb(64, 133, 133);
     color: white;
     font-size: 25px;
     /* position: absolute;
     right: 15%;
     top: 0; */
-    margin: 20px 0 50px 0;
+    margin: 20px 0 10px 0;
     padding: 10px;
+    text-align: center;
+}
+
+hr {
+    border: 1px solid lightgrey;
+    background-color: lightgrey;
+    margin: 10px;
+    width: 30%;
+    height: 1px;
+
+    
 }
 
 .location-cards-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 80px;
+    margin: 10px;
 }
 .location-card {
     width: 30%;
