--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ a {
     text-decoration: none;
 }
 
+
 /* HEADER */
 
 header {
@@ -69,10 +70,7 @@ header {
 /* Carousel Card Styling */
 
 .photo-carousel-container {
-    /* background-color: pink; */
-    /* height: 400px; */
     margin: 50px 50px 20px 50px;
-    /* position: relative; */
 }
 
 .carousel-card-deck {
@@ -138,10 +136,6 @@ h1 {
     border-radius: 3px 0 0 3px;
 }
 
-/* .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-} */
-
 /* Fading animation */
 .fade {
     animation-name: fade;
@@ -161,9 +155,19 @@ h1 {
     display: flex;
     flex-direction: column;
     margin: 10px 40px;
-    /* padding: 50px 0; */
     position: relative;
     align-items: center;
+}
+
+hr {
+    display: none;
+}
+
+.select-menu {
+    position: sticky;
+    top: 35px;
+    width: 100%;
+    background-color: white;
 }
 
 .activity-option-dropdown {
@@ -172,33 +176,30 @@ h1 {
     background-color: rgb(90, 133, 133);
     color: white;
     font-size: 20px;
+    font-variant: small-caps;
     font-style: italic;
-    position: sticky;
-    top: 50px;
-    margin: 20px 0 20px 0;
+    border: 1px solid grey;
+    margin: 20px 0 0px 0;
     padding: 10px;
     border-radius: 5px;
-    z-index: 1000;
+    text-align: center;
 }
 
 .location-cards-container {
     display: flex;
     flex-direction: column;
-    justify-content:center;
+    justify-content: center;
 }
 
 .location-card {
-    /* width: 100%;
-    display: block; */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 500px;
-  margin: 20px;
-  text-align: center;
+    max-width: 500px;
+    margin: 20px;
+    text-align: center;
 }
 
 .location-card img {
     background-size: cover;
-    /* object-fit: contain; */
     width: 100%;
     padding: 0px;
 }
@@ -212,13 +213,11 @@ h1 {
 footer {
     background-color: teal;
     height: 150px;
-    /* align-items: center; */
 }
 
 .row {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
     align-items: center;
     color: rgb(212, 215, 216);
     margin: 0 30px;
@@ -274,6 +273,52 @@ footer {
     transform: translateX(0%);
 }
 
+/* Tablet styling */
+@media (min-width: 420px) {
+.slide-caption {
+    font-size: 20px;
+    padding: 12px 12px;
+    position: absolute;
+    bottom: 20px; 
+    right: 0;  
+    width: 70%; 
+    height: 10%; 
+    text-align: end;
+    align-items: center;
+}
+
+.photo-carousel-header {
+    position: absolute;
+    bottom: 100px;
+    left: 0;
+    margin: auto;
+    font-size: 100px;
+    color: white;
+    background-color:rgb(150, 150, 158, 50%);
+    width: 70%;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 90%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    transition: 0.6x ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+}
+
 /* Wide screen styling */
 
 @media (min-width: 1000px) {
@@ -301,23 +346,10 @@ footer {
     justify-content: space-between;
     width: 100%;
     height: 100px;
-   
-    /* position: fixed;
-    top: 50;
-    left: 0;
-    right: 0;
-    bottom: 100;
-    z-index: 1000; */
 }
 
 .nav-center-bar {
     width: 100%;
-    
-    /* position: fixed;
-    top: 500;
-    left: 0;
-    right: 0;
-    bottom: 100; */
 }
 
 .nav-center-bar-list {
@@ -330,12 +362,10 @@ footer {
     align-items: center;
     padding: 10px 20%;
     margin: 0px;
-    
 }
 
 .nav-center-bar-list li {
     justify-content: space-between;
-    /* padding: 50px; */
     align-items: center;
 }
 
@@ -344,7 +374,6 @@ footer {
 
 .photo-carousel-container {
     background-size: auto;
-    /* background-color: pink; */
     margin: 50px 0 10px;
     display: flex;
     justify-content: center;
@@ -354,11 +383,8 @@ footer {
 
 
 .carousel-card-deck {
-    /* max-width: auto; */
     position: relative;
     margin: 50px 0 0 0;
-    /* display: block; */
-    /* object-fit: cover; */
     height: 550px;
     width: 1000px;
 }
@@ -368,11 +394,6 @@ footer {
     object-fit: cover;
     object-position: 0px 2px;
 }
-
-/* .carousel-card {
-    display: none;
-    position: relative;
-} */
 
 .prev, .next {
     cursor: pointer;
@@ -444,20 +465,21 @@ footer {
     align-items: center;
     width: 1000px;
     padding: 10px;
+    position: sticky;
+    top: 70px;
+    background-color: white;
+    width: 100%;
+}
+
+hr {
+    display: block;
 }
 
 .activity-option-dropdown {
-    /* display: inline-block; */
-    
     width: 40%;
-    /* position: absolute; */
-    /* right: 0; */
     background-color: rgb(64, 133, 133);
     color: white;
     font-size: 25px;
-    /* position: absolute;
-    right: 15%;
-    top: 0; */
     margin: 20px 0 10px 0;
     padding: 10px;
     text-align: center;
@@ -468,9 +490,7 @@ hr {
     background-color: lightgrey;
     margin: 10px;
     width: 30%;
-    height: 1px;
-
-    
+    height: 1px; 
 }
 
 .location-cards-container {
@@ -481,6 +501,8 @@ hr {
 }
 .location-card {
     width: 30%;
+    max-width: 500px;
+    max-height: 500px;
     padding: 30px;
 }
 
